dark mode style fixes

--- a/sass/_dark-mode-settings.scss
+++ b/sass/_dark-mode-settings.scss
@@ -29,7 +29,7 @@
   &__title {
     margin-left: 10px;
     font-size: 13px;
-    font-weight: bold;
+    font-weight: 400;
     color: $middle_light_text;
   }
 }
