--- a/sass/_default-project.scss
+++ b/sass/_default-project.scss
@@ -29,7 +29,7 @@
     bottom: 3px;
     margin-left: 10px;
     font-size: 13px;
-    font-weight: bold;
+    font-weight: 400;
     color: $middle_light_text;
   }
 
