--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -95,13 +95,13 @@
     &__title {
       margin-left: 10px;
       font-size: 13px;
-      font-weight: bold;
+      font-weight: 400;
       color: $middle_light_text;
 
       &--shortcut {
         margin-left: 3px;
         font-size: 13px;
-        font-weight: bold;
+        font-weight: 400;
         color: $lighter_text;
       }
     }
@@ -138,7 +138,7 @@
     &__title {
       margin-left: 10px;
       font-size: 13px;
-      font-weight: bold;
+      font-weight: 400;
       color: $middle_light_text;
     }
 
@@ -169,7 +169,7 @@
 
         p {
           font-size: 13px;
-          font-weight: bold;
+          font-weight: 400;
           color: #666666;
         }
       }
@@ -312,7 +312,7 @@
         p {
           margin-left: 10px;
           font-size: 13px;
-          font-weight: bold;
+          font-weight: 400;
           color: #666666;
         }
       }
@@ -350,7 +350,7 @@
     &__title {
       margin-left: 10px;
       font-size: 13px;
-      font-weight: bold;
+      font-weight: 400;
       color: $middle_light_text;
     }
   }
@@ -386,7 +386,7 @@
     &__title {
       margin-left: 10px;
       font-size: 13px;
-      font-weight: bold;
+      font-weight: 400;
       color: $middle_light_text;
     }
   }
